EPBDS-12839 Remove code for non-supported java versions < 11